# ezgzip

./: CHANGES.md  Makefile  README.md  dune-project  ezgzip.opam  index.html
.github/workflows/: main.yml
ezgzip/: index.html
ezgzip/Ezgzip/: index.html
ezgzip/Ezgzip/Z/: index.html
src/: dune  ezgzip.ml  ezgzip.mli  jbuild
test/: dune  test.ml
