opam-version: "2.0"
maintainer: "Hezekiah M. Carty <hez@0ok.org>"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "MIT"
synopsis: "Simple gzip (de)compression library"
homepage: "https://github.com/hcarty/ezgzip"
dev-repo: "git+https://github.com/hcarty/ezgzip.git"
bug-reports: "https://github.com/hcarty/ezgzip/issues"
doc: "https://hcarty.github.io/ezgzip/ezgzip/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "alcotest" {with-test & >= "0.8.1"}
  "astring"
  "benchmark" {with-test & >= "1.4"}
  "dune" {>= "1.0"}
  "ocplib-endian"
  "odoc" {with-doc & >= "1.1.1"}
  "qcheck" {with-test & >= "0.7"}
  "rresult"
  "camlzip"
  "ocaml" {>= "4.03.0"}
]
